tests/compiler/typecheck/unused_variables_1.kk.out
1
========

========
error:
  ┌─ tests/compiler/typecheck/unused_variables_1.kk:2:7
  │
2 │   let y = x
  │       ^ Unused variable
  │
  = This variable created but not used anywhere, consider removing it.
