tests/compiler/typecheck/unused_variables_1.kk
let foo = | x =>
  let y = x
  2
